[FLINK-24041][connectors] Changed all occurances of List.of to Arrays.asList